chore(proxy): udpate proxy config

--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/api": {
-    "target": "http://yapi.datagrand.com/mock/30",
+    "target": "http://localhost:10020",
     "secure": true,
     "changeOrigin": true
   }
