feat(type): add goods type

--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/api": {
-    "target": "http://localhost:10002",
+    "target": "http://yapi.datagrand.com/mock/156",
     "secure": true,
     "changeOrigin": true
   },
